fixed search field in safari

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header align="center">
         <div id="title"><a href="/">ocellus</a></div>
-        <div id="form">
-            <input name="q" id="q" type="search" placeholder="search" autofocus> 
+        <div>
+            <input name="q" id="q" type="text" placeholder="search" autofocus> 
             <button id="btn-images">go</button>
         </div>
         <div id="throbber">Loading&#8230;</div>
