small tweaks to the button style, and simpler local/remote settings

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>ocellus</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="image viewer for the Biodiversity Literature Repository">
+    <meta name="author" content="Puneet Kishor">
+    <meta name="copyright" content="CC0 Public Domain Dedication">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="JavaScript-autoComplete/auto-complete.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -28,16 +29,6 @@
             <a href="" id="next" class="pager">next</a>
         </div>
     </div>
-
-    <!-- <div id="large">
-        <div class="arrow-left"></div>
-        <figure>
-            <img src="https://www.zenodo.org/api/files/456d82d7-fa49-42cf-8576-23a10e49d9b6/big_70352.jpg">
-            <figcaption>
-                rec ID: <a href='https://zenodo.org/record/973234' target='_blank'>973234</a>
-            </figcaption>
-        </figure>
-    </div> -->
 
     <footer id="footer">
         <img src="img/fish.jpg">
