refactored code to simplify selectors

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
 
         <form id="fform" class="cf">
-            <div id="q-wrapper">
+            <div id="qWrapper">
                 <input name="q" id="q" type="text" required placeholder="search" autofocus> 
-                <button id="btn-images" type="submit">go</button>
+                <button id="btnImages" type="submit">go</button>
                 <input id="cacheMsgCheck" name="refreshCache" type="checkbox">
             </div>
             <br clear="both">
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <footer id="footer"><img src="img/fish.jpg"></footer>
+    <footer id="footer" class="fixed"><img src="img/fish.jpg"></footer>
 
     <script src="JavaScript-autoComplete/auto-complete.min.js"></script>
     <script src="js/family.min.js"></script>
