--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a id="aboutLink" href="/about">about</a>
         </div>
 
-        <form id="fform" class="cf">
+        <form id="formContainer" class="cf">
             <div id="qWrapper">
                 <input name="q" id="q" type="text" required placeholder="search" autofocus> 
                 <button id="btnImages" type="submit">go</button>
