first public trial of Ocellus2

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
     <footer id="footer" class="fixed"><img src="img/fish.jpg"></footer>
 
-    <!-- 
+    
     <script src="JavaScript-autoComplete/auto-complete.min.js"></script>
     <script src="js/family.min.js"></script>
     <script src="js/ocellus.js"></script> 
-    -->
-    <script src="js/all.min.js"></script>
+   
+    <!-- <script src="js/all.min.js"></script> -->
 </body>
 </html>
