fixed the link to zenodeo in facets

--- a/index2.html
+++ b/index2.html
@@ -80,19 +80,19 @@ const facets = [
     "noDuplicates": true },
 {   "key": "authors", 
     "actualKey": "creators.name",
-    "values": "http://localhost:3030/v1/authors", 
+    "values": "https://zenodeo.punkish.org/v1/authors", 
     "noDuplicates": false },
 {   "key": "keywords", 
     "actualKey": "keywords",
-    "values": "http://localhost:3030/v1/keywords", 
+    "values": "https://zenodeo.punkish.org/v1/keywords", 
     "noDuplicates": false },
 {   "key": "families", 
     "actualKey": "title",
-    "values": "http://localhost:3030/v1/families", 
+    "values": "https://zenodeo.punkish.org/v1/families", 
     "noDuplicates": false },
 {   "key": "taxa", 
     "actualKey": "title",
-    "values": "http://localhost:3030/v1/taxa", 
+    "values": "https://zenodeo.punkish.org/v1/taxa", 
     "noDuplicates": false },
 {   "key": "year", 
     "actualKey": "publicationdate",
