reverted back to original footer style

--- a/index2.html
+++ b/index2.html
@@ -65,8 +65,8 @@
 </div>
 
 <footer id="footer" class="fixed">
-    <a href="#about" id="aboutLink">about</a> 
-    <!-- <img src="img/fish.jpg"> -->
+    <!-- <a href="#about" id="aboutLink">about</a>  -->
+    <img src="img/fish.jpg">
 </footer>
 
 <script src="JavaScript-autoComplete/auto-complete.js"></script>
