deactivated carousel, for now

--- a/index.html
+++ b/index.html
@@ -46,6 +46,26 @@
         </div>
 
         <div id="wrapper">
+            <div id="carouselbox" class="off">
+                <div class="buttons">
+                    <button class="prev">
+                        ◀ <span class="offscreen">Previous</span>
+                    </button>
+                    <!-- <button class="next">
+                        <span class="offscreen">Next</span> ▶ 
+                    </button> -->
+                </div>
+                <div id="carousel" class="content">
+                </div>
+                <div class="buttons">
+                    <!-- <button class="prev">
+                        ◀ <span class="offscreen">Previous</span>
+                    </button> -->
+                    <button class="next">
+                        <span class="offscreen">Next</span> ▶ 
+                    </button>
+                </div>
+            </div>
             <div id="grid" class="grid"></div>
             <div id="masonry" class="masonry"></div>
             
@@ -58,7 +78,8 @@
 
     <footer id="footer" class="fixed"><img src="img/fish.jpg"></footer>
 
-    
+    <!-- <script src='js/lazyload.min.js'></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-beta.2/lazyload.js"></script>
     <script src="JavaScript-autoComplete/auto-complete.js"></script>
     <script src="js/family.min.js"></script>
     <script src="js/ocellus.js"></script> 
