tweaked figcaption/figure style and fixed pager visibility and result of zero records found

--- a/index.html
+++ b/index.html
@@ -103,10 +103,12 @@
         {{/figures}}
     </div>
     
+    {{#pager}}
     <div id="pager">
         ◀ <a href="{{prev}}" id="prev" class="pager">prev</a> 
         <a href="{{next}}" id="next" class="pager">next</a>  ▶
     </div>
+    {{/pager}}
 </script>
 
 <script src="js/mustache.min.js"></script>
