still working on carousel

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <tr>
                             <td>
                                 <div id="fs-container" class="header-component fs-container">
-                                    <input id="q" name="q" type="text" required placeholder="search" autofocus>
+                                    <!-- <input id="q" name="q" type="text" required placeholder="search" autofocus> -->
                                 </div>
                                 <button id="fs-go" class="header-component">go</button>
                             </td>
@@ -78,6 +78,7 @@
     <div class="row">
         <div class="twelve columns">
             <div id="wrapper"></div>
+            <div id="carousel"></div>
         </div>
     </div>
 </div>
@@ -93,8 +94,8 @@
     <div id="masonry" class="masonry">
         {{#figures}}
         <figure class='item'>
-            <!-- <a href="#carousel" onclick="Ocellus.carousel(event);"><img src="{{thumb250}}"></a> -->
-            <a href="{{imageSrc}}" target="_blank"><img src="{{thumb250}}"></a>
+            <a href="#carousel" onclick="Ocellus.carousel(event);"><img src="{{imgA}}"></a>
+            <!-- <a href="{{imageSrc}}" target="_blank"><img src="{{imgA}}"></a> -->
             <figcaption class="transition-050 opacity85 text">
                 rec ID: <a class="transition-050">{{recId}}</a>
                 <div class="transition-050 desc">{{title}}. <a href='{{zenodoRecord}}' target='_blank'>more</a></div>
@@ -106,11 +107,32 @@
     {{#pager}}
     <div id="pager">
         ◀ <a href="{{prev}}" id="prev" class="pager">prev</a> 
-        <a href="{{next}}" id="next" class="pager">next</a>  ▶
+        <a href="{{next}}" id="next" class="pager">next</a> ▶
     </div>
     {{/pager}}
 </script>
 
+<!-- template for the vertical carousel -->
+<script id="templateCarousel" type="x-tmpl-mustache">    
+    {{#figures}}
+    <figure class="image-wrapper ratio_16-9">
+        <a href="{{imageSrc}}" target="_blank"><img class="b-lazy" 
+            src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== 
+            data-src-a="{{imgA}}" 
+            data-src-b="{{imgB}}" 
+            data-src-c="{{imgC}}" 
+            data-src-d="{{imgD}}" 
+            alt="This is a sample 16 x 9 image"></a>
+        <figcaption>
+            rec ID: <a class="transition-050">{{recId}}</a>
+            <div class="transition-050 desc">{{title}}. <a href='{{zenodoRecord}}' target='_blank'>more</a></div>
+        </figcaption>
+    </figure>
+    {{/figures}}
+</script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.8.2/blazy.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.js"></script>
 <script src="js/mustache.min.js"></script>
 <script src="JavaScript-autoComplete/auto-complete.js"></script>
 <script src="js/family.min.js"></script>
@@ -126,14 +148,19 @@ window.onload = function() {
     const fsGo = document.querySelector('button[id=fs-go]');
     const qField = document.querySelector('input[name=q]');
     const wrapper = document.querySelector('#wrapper');
+    const carousel = document.querySelector('#carousel');
     const throbber = document.querySelector('#fs-throbber');
     const footer = document.querySelector('footer');
     const fsForm = document.querySelector('#fs-form');
     const about = document.querySelector('#about');
+    const fsContainer = document.querySelector('#fs-container');
 
-    //load and compile the masonry template
+    //load and compile the templates
     const templateMasonry = document.querySelector('#templateMasonry').innerHTML;
     Mustache.parse(templateMasonry);
+
+    const templateCarousel = document.querySelector('#templateCarousel').innerHTML;
+    Mustache.parse(templateCarousel);
     
     Ocellus.init({
         zenodeo: api,
@@ -142,6 +169,8 @@ window.onload = function() {
         footer: footer,
         templateMasonry: templateMasonry,
         wrapper: wrapper,
+        templateCarousel: templateCarousel,
+        carousel: carousel,
         about: about
     });
 
