tweaked img size and removed wavy underline from rec ID

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <!-- <a href="#carousel" onclick="Ocellus.carousel(event);"><img src="{{thumb250}}"></a> -->
             <a href="{{imageSrc}}" target="_blank"><img src="{{thumb250}}"></a>
             <figcaption class="transition-050 opacity85 text">
-                rec ID: <a class="transition-050">{{recId}}</a>
+                <a class="transition-050">rec ID: {{recId}}</a>
                 <div class="transition-050 desc">{{title}}. <a href='{{zenodoRecord}}' target='_blank'>more</a></div>
             </figcaption>
         </figure>
