clean state for blr

--- a/blr.html
+++ b/blr.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="Skeleton-2.0.4/css/normalize-7.0.0.min.css">
     <link rel="stylesheet" href="Skeleton-2.0.4/css/skeleton.min.css">
     <link rel="stylesheet" href="JavaScript-autoComplete/auto-complete.css">
-    <link rel="stylesheet" href="fancysearch/fancysearch.css">
-    <link rel="stylesheet" href="css/ocellus.css#uhydftr">
+    <link rel="stylesheet" href="blr/fancysearch/fancysearch.css">
+    <link rel="stylesheet" href="blr/css/ocellus.css#uhydftr">
     <link rel="stylesheet" href="css/throbber.css">
 </head>
 <body>
@@ -28,7 +28,7 @@
         </div>              
         
         <div class="searchContainer">
-            <nav><a href="">images</a><a href="">treatments</a><a href="">citations</a></nav>
+            <nav><a href="" class="searchFocus">images</a><a href="">treatments</a><a href="">citations</a></nav>
             <div id="sSearch" class="searchWidget">
                 <select name="communities">
                     <option selected>all communities</option>
@@ -42,8 +42,7 @@
                 <button id="ssGo" class="searchButton">go</button>
             </div>
             <div id="fSearch" class="off-none"></div>
-            <!-- <div class="searchChooser"><a id="searchChooser" href="">switch to fancy search</a></div> -->
-            <div class="searchChooser">switch to fancy search</div>
+            <div class="searchChooser"><a id="searchChooser" href="">switch to fancy search</a></div>
         </div>
     </div>
 </header>
@@ -78,7 +77,7 @@
 </div>
 
 <footer id="footer" class="fixed">
-    <img src="img/fish.jpg">
+    <img src="blr/img/fish.jpg">
 </footer>
 
 <!-- template for the masonry wall of images -->
@@ -138,13 +137,13 @@
     {{/figures}}
 </script>
 
-<script src="js/cookies.js"></script>
+<script src="blr/js/cookies.js"></script>
 <script src="js/lazysizes.min.js"></script>
 <script src="js/mustache.min.js"></script>
 <script src="JavaScript-autoComplete/auto-complete.min.js"></script>
-<script src="fancysearch/fancysearch.js"></script>
-<script src="js/ocellus.js"></script>
-<script src="js/facets.js"></script>
+<script src="blr/fancysearch/fancysearch.js"></script>
+<script src="blr/js/ocellus.js"></script>
+<script src="blr/js/facets.js"></script>
 
 <script type="text/javascript">
 
