--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     
     <link rel="icon" type="image/png" href="img/ocellus.png">
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="Skeleton-2.0.4/css/normalize-7.0.0.min.css">
+    <link rel="stylesheet" href="Skeleton-2.0.4/css/skeleton.min.css">
     <link rel="stylesheet" href="JavaScript-autoComplete/auto-complete.css">
     <link rel="stylesheet" href="css/ocellus.css#uhydftr">
     <link rel="stylesheet" href="css/throbber.css">
