--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 <script src="js/family.min.js"></script>
 <script src="js/ocellus.js#uhydftr"></script>
 <script type="text/javascript">
-const zenodeo = 'https://zenodeo.punkish.org';
-//const zenodeo = 'http://localhost:3030';
+//const zenodeo = 'https://zenodeo.punkish.org';
+const zenodeo = 'http://localhost:3030';
 
 window.onload = function() {
 
