fixed path to production zenodeo

--- a/blr.html
+++ b/blr.html
@@ -237,8 +237,8 @@ window.onload = function() {
     
     Ocellus.init({
 
-        //zenodeo: 'https://zenodeo.punkish.org',
-        zenodeo: 'http://localhost:3030',
+        zenodeo: 'https://zenodeo.punkish.org',
+        // zenodeo: 'http://localhost:3030',
 
         // layout: 'grid',
         //layout: 'masonry',
