--- a/blr.html
+++ b/blr.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="Skeleton-2.0.4/css/normalize-7.0.0.min.css">
     <link rel="stylesheet" href="Skeleton-2.0.4/css/skeleton.min.css">
     <link rel="stylesheet" href="JavaScript-autoComplete/auto-complete.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin=""/>
     <link rel="stylesheet" href="blr/fancysearch/fancysearch.css">
     <link rel="stylesheet" href="blr/css/ocellus.css">
     <link rel="stylesheet" href="blr/css/xml.css">
@@ -196,6 +197,8 @@
             <li class="species"><div class="txn">{{species}}</div></li>
         </ul>
         
+        <div id="map"></div>
+
         <div id="masonry" class="masonry">
             {{#figures}}
             <figure class='item'>
@@ -229,6 +232,7 @@
 <script src="js/lazysizes.min.js"></script>
 <script src="js/mustache.min.js"></script>
 <script src="JavaScript-autoComplete/auto-complete.min.js"></script>
+<script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==" crossorigin=""></script>
 <script src="blr/fancysearch/fancysearch.js"></script>
 <script src="blr/js/config.js"></script>
 <script src="blr/js/ocellus.js"></script>
