--- a/blr.html
+++ b/blr.html
@@ -224,7 +224,9 @@
             {{/figures}}
         </div>
 
-        <p>{{{xml}}}</p>
+        <hr>
+
+        <p class="xml">{{{xml}}}</p>
     </div>
 </script>
 
@@ -233,10 +235,14 @@
 <script src="js/mustache.min.js"></script>
 <script src="JavaScript-autoComplete/auto-complete.min.js"></script>
 <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==" crossorigin=""></script>
+
+<!-- <script src="https://unpkg.com/xregexp/xregexp-all.js"></script>
 <script src="blr/fancysearch/fancysearch.js"></script>
+<script src="blr/js/facets.js"></script> -->
+
 <script src="blr/js/config.js"></script>
 <script src="blr/js/ocellus.js"></script>
-<script src="blr/js/facets.js"></script>
+
 <!-- <script src="blr/js/scripts.min.js"></script> -->
 
 <script type="text/javascript">
