tweaked communities select dropdown

--- a/blr.html
+++ b/blr.html
@@ -44,7 +44,7 @@
 
                         <div class="drop-down" data-tooltip="choose a community">
 
-                            <div class="arrow-down"></div>
+                            <div class="arrow-down">•••</div>
                             <ul>
                                 <!-- <li>choose a community…</li> -->
                                 <li><a href="#">all communities</a></li>
