better fit for map

--- a/index2.html
+++ b/index2.html
@@ -214,6 +214,15 @@
     {{#treatments}}
     <details open>
         <summary>{{treatmentTitle}}</summary>
+        
+        <!--
+        <div class='masonry'>
+            {{#figures}}
+            <a href="#carousel" class="carousel"><img src="{{imgA_}}" width="50" data-recid="{{recId}}"></a> 
+            {{/figures}}
+        </div>
+        -->
+        
         <p>{{{s}}} <a class="treatmentLink" href="/index2.html?resource=treatments&treatmentId={{treatmentId}}">more</a></p>
     </details>
     {{/treatments}}
