--- a/index2.html
+++ b/index2.html
@@ -215,11 +215,11 @@
     <details open>
         <summary>{{treatmentTitle}}</summary>
         
-        <div class='masonry'>
+        <!-- <div class='masonry'>
             {{#images}}
             <a href="#carousel" class="carousel"><img src="{{httpUri}}" width="50" alt="{{captionText}}"></a> 
             {{/images}}
-        </div>
+        </div> -->
         
         <p>{{{s}}} <a class="treatmentLink" href="/index2.html?resource=treatments&treatmentId={{treatmentId}}">more</a></p>
     </details>
